1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

Thu Apr 15 17:02:49 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* configure.in: Fix typo in test below; fixed name of the autoconf
		cache variable which indicates if sys/streams.h exists.

1999-04-13    <tytso@rsts-11.mit.edu>

	* configure.in: Check for setupterm() in libncurses in addition to
		libcurses.  Only set STREAMSPTY if both grantpt and
		sys/streams.h exists.  (Will be needed for Linux/Redhat 6.0)

Wed Mar 31 00:05:58 1999  Tom Yu  <tlyu@mit.edu>

	* sys_term.c (getptyslave): Under AIX, ignore I_PUSH pckt
	failure.

Tue Mar 30 23:59:15 1999  Tom Yu  <tlyu@mit.edu>

	* termios-tn.c: Include termio.h under AIX due to brokenness.

Wed Feb 24 20:12:10 1999  Tom Yu  <tlyu@mit.edu>

	* telnetd.8: Resync manpage.

	* telnetd.c: Rework flags controlling hostname logging.

Mon Feb 22 18:27:38 1999  Tom Yu  <tlyu@mit.edu>

	* telnetd.8: Document hostname logging changes.

	* telnetd.c: Add options to control logging of remote hostname to
	login(1).

Wed Feb  3 22:57:52 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* state.c: Increase size of subbufer so that we don't truncate
		mongo-gram tickets from Microsoft.  [telnet/688]

1998-11-14  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Add check for <sys/utsname.h>.

	* utility.c (putf): Add support for %s, %m, %r, %v using
		information from the uname() system call.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Wed Aug 12 00:17:09 1998  Matthew D Hancher  <mdh@mit.edu>

	* Makefile.in (AUTH_DEF): Undefine LOGIN_CAP_F so that telnetd
	runs login with -f rather than -F for preauthenticated login, 